raffia/tests/error/scss/at-rule/forward/hide-empty-variable.snap
---
source: raffia/tests/error.rs
---
error: unknown token
  ┌─ hide-empty-variable.scss:1:19
  │
1 │ @forward "a" hide $;
  │                   ^


